# OTUS_Homework_9

./: CMakeLists.txt
examples/: CMakeLists (copy 2) (copy 1).txt
examples/New Folder/: CMakeLists.txt
include/: DuplicateFinder.hpp  File.hpp  HashSum.hpp
src/: DuplicateFinder.cpp  File.cpp  HashSum.cpp  main.cpp
test/: test.cpp
